Refactor booking controller, add accept endpoint and update location WebSocket handling